syntax = "proto3";
import "google/protobuf/timestamp.proto";

package pkg.kannon.stats.types;

option go_package = "github.com/ludusrusso/kannon/proto/kannon/stats/types";

message Stats {
  string message_id = 1;
  string domain = 2;
  string email = 3;
  google.protobuf.Timestamp timestamp = 4;
  string type = 5;
  StatsData data = 6;
}

message StatsData {
  oneof data {
    StatsDataAccepted accepted = 1;
    StatsDataDelivered delivered = 2;
    StatsDataFailed failed = 3;
    StatsDataBounced bounced = 4;
    StatsDataOpened opened = 5;
    StatsDataClicked clicked = 6;
    StatsDataRejected rejected = 7;
    StatsDataError error = 8;
  }
}

message StatsDataAccepted {}

message StatsDataRejected {
  string reason = 1;
}

message StatsDataDelivered {}

message StatsDataFailed {}

message StatsDataBounced {
  bool permanent = 1;
  uint32 code = 2;
  string msg = 3;
}

message StatsDataError {
  uint32 code = 1;
  string msg = 2;
}

message StatsDataOpened {
  string user_agent = 1;
  string ip = 2;
}

message StatsDataClicked {
  string user_agent = 1;
  string ip = 2;
  string url = 3;
}